adding hateoas remain only alumni-restricted